connige erreur
Updated the README to reflect the new project structure and objectives related to AWS LocalStack. Removed previous project details and added installation and configuration instructions.